--- a/configs/Configuracoes.properties
+++ b/configs/Configuracoes.properties
@@ -1,6 +1,5 @@
-caminhoDaConfigDoReport=C:\\My Workspace\\BDD\\configs\\extent-config.xml
-ambiente=local
-navegador=chrome
+caminhoDaConfigDoReport=C:\\My Workspace\\ProjetoBDD\\configs\\extent-config.xml
+caminhoExcel=C:\\My Workspace\\ProjetoBDD\\src\\main\\java\\br\\com\\rsinet\\hub_bdd\\dadosParaTeste\\DadosParaTeste.xlsx
 maximizarJanela=true
 implicitlyWait=10
 url=https://www.advantageonlineshopping.com/#/
